RESOLVED FIXED215774
REGRESSION (r258215): Title preview movie isn't displayed at www.thismmalife.com
https://bugs.webkit.org/show_bug.cgi?id=215774
Summary REGRESSION (r258215): Title preview movie isn't displayed at www.thismmalife.com
Fernando
Reported 2020-08-24 11:14:24 PDT
This was tested on iOS 14.0 (18A5351d) beta 5 Browsing a website that presents the following GIF we're not able to see anything other than the background color of the element https://res.cloudinary.com/hkyugldxm/image/fetch/s--tWG33PgR--/c_imagga_scale,f_auto,fl_progressive,h_420,q_66,w_1000/https://thismmalife-images.s3.amazonaws.com/i/nzb6iyu6cpodsele1fqe.gif The `img` is presented in HTML as: <img src="https://res.cloudinary.com/hkyugldxm/image/fetch/s--tWG33PgR--/c_imagga_scale,f_auto,fl_progressive,h_420,q_66,w_1000/https://thismmalife-images.s3.amazonaws.com/i/nzb6iyu6cpodsele1fqe.gif" width="1000" height="420" style="background-color:#dddddd;" class="crayons-article__cover__image" alt="Cover image for BJ Penn deals with GSP's low kicks like they are nothing 🤷🏻"> This is not a problem in iOS 13.6.1 (17G80). Could this be a regression on GIF support? The web page that has this GIF also contains another GIF that is presented correctly, which makes the problem a bit more odd. It can be seen here: https://www.thismmalife.com/taliashaw_962/a-rose-namajunas-flying-arm-bar-move-4pmo Thank you in advance for the help.
Attachments
Patch (110.08 KB, patch)
2020-08-26 13:10 PDT, Jer Noble
eric.carlson: review+
Patch for landing (110.09 KB, patch)
2020-08-26 13:59 PDT, Jer Noble
no flags
Patch for landing (2.76 KB, patch)
2020-08-26 14:50 PDT, Jer Noble
no flags
Fernando
Comment 1 2020-08-24 11:19:36 PDT
I apologize, the correct URL for the article in the website that contains both the GIF that correctly renders and the one that doesn't render is the following: https://www.thismmalife.com/leewynne/bj-penn-deals-with-gsp-s-low-kicks-like-they-are-nothing-42hc
Alexey Proskuryakov
Comment 2 2020-08-24 17:09:49 PDT
This is also a Safari 14 regression on macOS. The one that doesn't play is above the title. It's not actually a .gif despite what the URL says - it's an mp4 in Safari, and a webp in Chrome, loaded via an <img>.
Radar WebKit Bug Importer
Comment 3 2020-08-24 17:10:01 PDT
Jer Noble
Comment 4 2020-08-25 10:48:16 PDT
Looks like the .mp4 in question has an output PTS delta applied, which leads to us grabbing the wrong sample out of the SampleMap and causing a decode error. Simple fix; just need to ask for the `CMSampleBufferGetOutputPresentationTimeStamp()` rather than the `CMSampleBufferGetPresentationTimeStamp()` in `ImageDecoderAVFObjC::storeSampleBuffer()` and write a test.
Jer Noble
Comment 5 2020-08-26 13:10:11 PDT
Peng Liu
Comment 6 2020-08-26 13:28:41 PDT
Comment on attachment 407327 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=407327&action=review > LayoutTests/media/video-as-img-output-pts-expected.txt:1 > +Tests that an with a .mp4 source where that .mp4 has an edit list will correctly decode. Something is missing here?
Eric Carlson
Comment 7 2020-08-26 13:41:21 PDT
Comment on attachment 407327 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=407327&action=review > LayoutTests/media/video-as-img-output-pts.html:8 > + consoleWrite('Tests that an <img> with a .mp4 source where that .mp4 has an edit list will correctly decode.') s/<img>/&lt;img&gt;/
Jer Noble
Comment 8 2020-08-26 13:59:47 PDT
Created attachment 407335 [details] Patch for landing
Jer Noble
Comment 9 2020-08-26 14:50:55 PDT
Created attachment 407340 [details] Patch for landing
EWS
Comment 10 2020-08-27 09:55:07 PDT
Committed r266239: <https://trac.webkit.org/changeset/266239> All reviewed patches have been landed. Closing bug and clearing flags on attachment 407335 [details].
Fernando
Comment 11 2020-09-12 09:38:51 PDT
Hello again, was this patch shipped in the latest iOS beta release? I was still able to reproduce the problem but I haven't tested Safari preview release on macOS so I'm not sure if it's fixed there.
Alexey Proskuryakov
Comment 12 2020-09-12 10:17:17 PDT
(In reply to Fernando from comment #11) > Hello again, was this patch shipped in the latest iOS beta release? It was not. > I was still able to reproduce the problem but I haven't tested Safari preview release on macOS so I'm not sure if it's fixed there. Latest Safari 14 beta and Safari Technology Preview do include this fix.
Alexey Proskuryakov
Comment 13 2020-09-14 18:28:57 PDT
> Latest Safari 14 beta and Safari Technology Preview do include this fix. I was incorrect, they do not. STP 113 includes r265893, which is older, and beta 5 is older too.
Alexey Proskuryakov
Comment 14 2020-09-14 18:31:06 PDT
*** Bug 216088 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 15 2020-09-14 21:06:53 PDT
Further correction: latest Safari beta does have the fix, it’s STP that’s older.
Colin Bendell
Comment 16 2020-09-16 05:31:34 PDT
Can you confirm that this patch landed in ios14 GM? If it did then we still have a regression.
Fernando
Comment 17 2020-09-17 13:08:11 PDT
Same here, Safari in iOS 14.0 (18A373) still experiences the problem
Jer Noble
Comment 18 2020-09-18 10:03:05 PDT
(In reply to Colin Bendell from comment #16) > Can you confirm that this patch landed in ios14 GM? If it did then we still > have a regression. No, this change missed the cutoff. I'll ping this bug when a fix is publicly testable.
Colin Bendell
Comment 19 2020-09-19 08:42:00 PDT
confirmed fixed in ios14.2 beta 1. Aside: this is an example of why UA sniffing is still needed. While not ideal, having browser version numbers in the UA allow service providers adapt content to work around bugs.
Ahmad Saleem
Comment 20 2022-10-10 13:55:24 PDT
Note You need to log in before you can comment on or make changes to this bug.