Cherry-pick r266239. rdar://problem/67963554

REGRESSION (r258215): Title preview movie isn't displayed at www.thismmalife.com
    https://bugs.webkit.org/show_bug.cgi?id=215774
    <rdar://problem/67707957>

    Reviewed by Eric Carlson.

    Source/WebCore:

    Test: media/video-as-img-output-pts.html

    Use CMSampleBufferGetOutputPresentationTimeStamp() for sample PTS.

    * platform/graphics/avfoundation/objc/ImageDecoderAVFObjC.mm:
    (WebCore::ImageDecoderAVFObjC::storeSampleBuffer):

    LayoutTests:

    * media/content/video-as-img.mp4: Added.
    * media/video-as-img-output-pts-expected.txt: Added.
    * media/video-as-img-output-pts.html: Added.

    Canonical link: https://commits.webkit.org/228693@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266239 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/227865.101@safari-610.1.28.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.1.28.1-branch@266302 268f45cc-cd09-0410-ab3c-d52691b4dbfc